package Protocol;

message S2CGameCreateRsp {
	required bool game_create_result = 1;
	optional uint32 room_id = 2;
	optional bytes failed_reason = 3;
}