package Protocol;

message S2CNewRoomAddRsp {
	required uint32 id = 1;
	required string room_name = 2;
}